# omikuji

./: .gitignore  Format.rtf  Makefile  Makefile.am  README  configure.ac
include/: omikujidata.h
man/: Makefile.am  omifile.1  omikuji.6
source/: Makefile.am  omifile.c  omikuji.c  omikujidata.c  omikujidata.h
